# rocketlab_genai

./: .gitignore  README.md
server/: README.md  pyproject.toml
server/app/: config.py  dependencies.py  exceptions.py  main.py
server/app/repositories/: base_repository.py  database_repository.py  feedback_repository.py  history_repository.py  question_repository.py
server/app/routers/: agent_router.py  feedback_router.py  health_router.py  history_router.py
server/app/schemas/: agent.py  common.py  feedback.py  history.py
server/app/services/: agent_service.py  gemini_service.py  guardrail_service.py
server/database/: run_migrations.py
server/database/migrations/: 001_create_feedback.sql  alter_query_history_include_analysis.sql  create_history.sql  create_question_and_update_others.sql
server/scripts/: inspect_db.py  seed_sample_business.py
web/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: App.tsx  index.css
web/src/components/: AssistantMessage.tsx  Chat.tsx  ChatMessage.tsx  LoadingSkeleton.tsx
web/src/lib/: api.ts
